finish everything yay

--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -3,5 +3,6 @@ What is Event Driven Architecture?
 
 # Answer
 
+An Event Driven Architecture is a type of event that uses events to trigger and communicate between decoupled services. Often used for applications built with microservices.
 
 # Teacher Feedback
