--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -3,5 +3,6 @@ Why is event delegation helpful?
 
 # Answer
 
+Event delegation is helpful because it makes sure to isolate a specified role to that child tag. So in the case of pressing a button and only wanting that button to trigger and nothing outside of it, delegation can be used to do so.
 
 # Teacher Feedback
