--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -3,5 +3,6 @@ What is event delegation?
 
 # Answer
 
+An event delegation is a way to prevent bubbling from happening. Basically making sure only the child of a parent tag is triggered and not everything else. Delegation is giving a **role** to the child tags.
 
 # Teacher Feedback
