--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -6,3 +6,7 @@ What is Event Driven Architecture?
 An Event Driven Architecture is a type of event that uses events to trigger and communicate between decoupled services. Often used for applications built with microservices.
 
 # Teacher Feedback
+
+Yup!
+
+Score: 3/3
