--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -6,3 +6,7 @@ What is event delegation?
 An event delegation is a way to prevent bubbling from happening. Basically making sure only the child of a parent tag is triggered and not everything else. Delegation is giving a **role** to the child tags.
 
 # Teacher Feedback
+
+Yup!
+
+Score: 3/3
