--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -6,3 +6,7 @@ Why is event delegation helpful?
 Event delegation is helpful because it makes sure to isolate a specified role to that child tag. So in the case of pressing a button and only wanting that button to trigger and nothing outside of it, delegation can be used to do so.
 
 # Teacher Feedback
+
+Yup! It is also helpful in that you do not need to attach an event listener to every single element, only the parent!
+
+Score: 3/3
